added banner section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-
+    <header>
+        <section class="banner-section content-width">
+            <div class="banner-content">
+                <p class="banner-short-title">Happy New Year</p>
+                <h2 class="banner-large-title">New Year Party <br> Celebration</h2>
+            </div>
+        </section>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 
 </html>
