added second section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <!-- 65% section start -->
+        <section class="second-section content-width">
+            <div class="second-section-content">
+                <h1 class="second-first-title">65% OFF</h1>
+                <p class="second-title">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h2 class="third-title">ALL CATEGORIES</h2>
+                <div class="image-container">
+                    <img src="./images/New Year Photo.png" alt="img">
+                </div>
+            </div>
+        </section>
+        <!-- 65% section end -->
+    </main>
     <footer></footer>
 </body>
 
