--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="second-title">OUR HOLIDAY DEALS ARE BETTER</p>
                 <h2 class="third-title">ALL CATEGORIES</h2>
                 <div class="image-container">
-                    <img src="./images/New Year Photo.png" alt="img">
+                    <img src="./images/new-year.png" alt="img">
                 </div>
             </div>
         </section>
