--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-Year</title>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 <p class="second-title">OUR HOLIDAY DEALS ARE BETTER</p>
                 <h2 class="third-title">ALL CATEGORIES</h2>
                 <div class="image-container">
-                    <img src="./images/new-year.png" alt="img">
+                    <img src="./images/new-year.png" alt="banner-img">
                 </div>
             </div>
         </section>
