--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
             </div>
         </section>
         <!-- 65% section end -->
+
+        <!-- midnight party section start -->
+        <section class="midnight-section content-width">
+            <div class="midnight-content">
+                <h2 class="midnight-title">Welcome to midnight party</h2>
+                <p class="midnight-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <div class="midnight-btn">
+                    <span>Join Now</span>
+                </div>
+            </div>
+            <div class="midnight-img">
+                <img src="/images/group-3.png" alt="img">
+            </div>
+        </section>
+        <!-- midnight party section end -->
+
     </main>
     <footer></footer>
 </body>
