added happy new year img

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="midnight-img">
-                <img src="/images/group-3.png" alt="img">
+                <img src="./images/group-three.png" alt="img">
             </div>
         </section>
         <!-- midnight party section end -->
