--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
         </section>
         <!-- midnight party section end -->
 
+        <!-- 4th section start -->
+        <section class="location-section content-width">
+            <div class="location-content">
+                <h3 class="location-title"><span class="red">Place:</span> New Park Hotel</h3>
+                <h3 class="location-title"><span class="red">Date:</span> 31 December Night 2023</h3>
+                <h3 class="location-title"><span class="red">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                <div class="location-btn">
+                    <button>Join Now</button>
+                </div>
+            </div>
+        </section>
+        <!-- 4th section end -->
+
     </main>
     <footer></footer>
 </body>
