--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
         </section>
         <!-- 4th section end -->
 
+        <!-- coming soon section start -->
+        <section class="coming-soon content-width">
+            <div class="coming-soon-content">
+                <div class="coming-first-content">
+                    <h3 class="first-title">NEW BEST OFFER</h3>
+                    <h2 class="second-title">Coming Soon</h2>
+                    <p class="first-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="image">
+                    <img src="./images/ellipse.png" alt="img">
+                </div>
+                <div class="coming-last-content">
+                    <h3 class="last-title">2024</h3>
+                    <p class="last-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="./images/happy-new-year.png" alt="img">
+                </div>
+            </div>
+        </section>
+        <!-- coming soon section end -->
+
     </main>
     <footer></footer>
 </body>
