added holidays section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
         </section>
         <!-- coming soon section end -->
 
+        <!-- holidays sale section start -->
+        <section class="holidays content-width">
+            <div class="holidays-content">
+                <p class="holidays-short-title">WHAT IS FUNCTIONAL</p>
+                <h2 class="holidays-sale"><span class="sale">Holidays</span> Sale 50%</h2>
+                <p class="holidays-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.</p>
+            </div>
+            <div class="holidays-images"></div>
+            <div class="gift-box">
+                <img src="./images/group-2.png" alt="img">
+                <div class="girl-image">
+                    <img src="./images/girl.png" alt="">
+                </div>
+            </div>
+            <div class="discount">
+                <img src="./images/discount.png" alt="img">
+            </div>
+        </section>
+        <!-- holidays sale section end -->
+
     </main>
     <footer></footer>
 </body>
