--- a/index.html
+++ b/index.html
@@ -104,6 +104,37 @@
         </section>
         <!-- holidays sale section end -->
 
+        <!-- portfolio section start -->
+        <section class="portfolio content-width">
+            <div class="portfolio-content">
+                <p class="portfolio-content-first-title">THE BEST GIFTS</p>
+                <h2 class="portfolio-content-second-title">Our Awesome Portfolio</h2>
+                <p class="portfolio-content-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                    sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="portfolio-images">
+                <div class="item">
+                    <img src="./images/bag-2.png" alt="img">
+                </div>
+                <div class="item">
+                    <img src="./images/bag-1.png" alt="img">
+                </div>
+                <div class="item">
+                    <img src="./images/shoes-1.png" alt="img">
+                </div>
+                <div class="item">
+                    <img src="./images/shoes-2.png" alt="img">
+                </div>
+                <div class="item">
+                    <img src="./images/sunglass.png" alt="img">
+                </div>
+                <div class="item">
+                    <img src="./images/ring.png" alt="img">
+                </div>
+            </div>
+        </section>
+        <!-- portfolio section end -->
     </main>
     <footer></footer>
 </body>
