added subscribe section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,24 @@
             </div>
         </section>
         <!-- portfolio section end -->
+
+        <!-- subscribe section start -->
+        <section class="subscribe content-width">
+            <div class="subscribe-content">
+                <img class="logo" src="./images/group-1.png" alt="img">
+                <h2 class="subscribe-title">Subscribe Newsletter</h2>
+                <p class="subscribe-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+                <div class="subscribe-form">
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="user@gmail.com">
+                        <button class="btn">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- subscribe section end -->
     </main>
     <footer></footer>
 </body>
