--- a/index.html
+++ b/index.html
@@ -154,7 +154,36 @@
         </section>
         <!-- subscribe section end -->
     </main>
-    <footer></footer>
+    <footer class="footer-section">
+        <div class="footer-first-text">
+            <div>
+                <h3>44, Big Building Roosevelt Street <br><br>
+                    Beach Gardens Florida 33410</h3>
+            </div>
+            <div>
+                <div class="footer-contact">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+00 123 584 124</p>
+                </div>
+                <div class="footer-contact-two">
+                    <i class="fa-brands fa-chrome"></i>
+                    <p>www.website.com</p>
+                </div>
+            </div>
+        </div>
+        <hr class="hr">
+        <div class="social-icon">
+            <img src="./images/facebook 1.svg" alt="">
+            <img src="./images/instagram 1.svg" alt="">
+            <img src="./images/twitter 1.svg" alt="">
+            <img src="./images/linkedin 1.svg" alt="">
+        </div>
+        <hr class="hr">
+        <div class="footer-last-text">
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+        </div>
+    </footer>
 </body>
 
 </html>
